--- a/toc.yaml
+++ b/toc.yaml
@@ -987,6 +987,7 @@ toc:
             - fl-limitations.md
             - nlb-limitations.md
             - pps-limitations.md
+            - par-known-issues.md
             - vni-known-issues.md
             - vpn-limitations.md
             - vpn-client-to-site-limitations.md
