--- a/toc.yaml
+++ b/toc.yaml
@@ -1143,6 +1143,7 @@ toc:
                 - lb-ts-faulted.md
                 - lb-ts-409.md
                 - lb-ts-backend-members.md
+                - lb-ts-https-listener.md
                 - ppnlb-ts.md
             - topicgroup:
                 id: tbs-pps
