--- a/toc.yaml
+++ b/toc.yaml
@@ -1022,6 +1022,7 @@ toc:
                 - block_storage_vpc_ts4.md
                 - block_storage_vpc_ts5.md
                 - block_storage_vpc_ts6.md
+                - block_storage_vpc_ts7.md
             - topicgroup:
                 id: tbs-block-snapshots
                 label: Troubleshooting block storage snapshots
