--- a/toc.yaml
+++ b/toc.yaml
@@ -1136,6 +1136,8 @@ toc:
               - lb-ts-maintenance-pending.md
               - lb-ts-unknown.md
               - lb-ts-faulted.md
+              - lb-ts-alb-members-same-port.md
+              - lb-ts-nlb-members-same-port.md
               - lb-ts-409.md
               - lb-ts-backend-members.md
               - lb-ts-https-listener.md
